# thai-national-id-smartcard

./: README.md  pyproject.toml  sonar-project.properties
.github/workflows/: python-tests.yml
notebooks/example_user/: Untitled.ipynb
tests/: test_add.py
