[tool.poetry]
name = "thai_national_id_smartcard"
version = "0.1.0"
description = ""
authors = ["The Gang Technology"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
ipykernel = "^6.29.4"
flake8-annotations = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
